Add message swagger
