# src/routes/message.js
@@ -2,6 +2,8 @@ const express = require("express");
 const router = express.Router();
 const messageController = require("../controllers/message");
 
-router.post("/:chatRoomId", messageController.getMessageChatRoom);
+router.patch("/:id", messageController.update);
+router.post("/", messageController.create);
+router.get("/", messageController.getList);
 
 module.exports = router;
